--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,10 +1,12 @@
 .App {
   width: 100%;
-  height: 1000px;
 }
 
 .dark-app {
   width: 100%;
-  height: 1000px;
   background-color: rgba(0, 0, 0, 0.754);
+}
+
+body {
+  margin: 0px;
 }
