--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,7 @@
 .header {
+  width: 100%;
+  height: 100px;
+  background-color: brown;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,6 +9,7 @@
 
 .dark-mode {
   width: 100px;
+  height: 80px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
