--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,9 @@
 .App {
-  width: 100%;
+  max-width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .dark-app {
@@ -9,4 +13,7 @@
 
 body {
   margin: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
