--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,6 +7,16 @@
   align-items: center;
 }
 
+.header-dark {
+  width: 100%;
+  height: 100px;
+  background-color: brown;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
 .dark-mode {
   width: 100px;
   height: 80px;
@@ -14,4 +24,13 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.name {
+  margin-left: 30px;
+  font-size: 40px;
+}
+
+.dark-mode {
+  margin-right: 30px;
 }
