--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,10 +7,11 @@ body {
 }
 
 .App {
-  width: 100hv;
+  width: 100%;
   height: 100vh;
   background-color: aliceblue;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
