--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,7 +9,7 @@ body {
 .App {
   width: 100%;
   height: 100vh;
-  background-color: aliceblue;
+  background-color: rgb(204, 230, 252);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
