--- a/src/components/MainPage/main-page.scss
+++ b/src/components/MainPage/main-page.scss
@@ -3,14 +3,17 @@
 .main-page-container {
   width: 1000px;
   height: 500px;
-  background-color: rgb(0, 132, 255);
+  display: flex;
+  background-color: #fff;
+  // background-color: rgb(0, 132, 255);
 }
 
 .data-container {
   width: 500px;
   height: 500px;
   padding: 20px;
-  background-color: #dedede;
+  background-color: #f8f8f8;
+  // background-color: #fff;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -42,15 +45,23 @@
 }
 
 .data-body {
-  background-color: brown;
-  width: 460px;
+  // background-color: brown;
+  width: 340px;
   //   height: 310px;
 }
 
 .my-data {
   font-size: 20px;
   list-style: none;
-  background-color: #fff;
+  text-align: left;
+  margin: 10px;
+}
+
+.data-ul {
+  display: flex;
+  flex-wrap: wrap;
+  // align-items: center;
+  // justify-content: center;
 }
 
 .data-footer {
@@ -66,4 +77,38 @@
     font-size: 20px;
     font-family: "Roboto Condensed", sans-serif;
   }
+}
+
+.about-me-container {
+  width: 500px;
+  height: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  // background-color: brown;
+}
+
+.me-header {
+  width: 500px;
+  height: 130px;
+  background-color: rgb(249, 194, 76);
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  h1 {
+    font-size: 55px;
+    color: white;
+    margin-bottom: 0;
+  }
+}
+
+.history {
+  background-color: #fff;
+  font-size: 20px;
+  margin-top: 80px;
+  width: 400px;
 }
