--- a/src/components/MainPage/main-page.scss
+++ b/src/components/MainPage/main-page.scss
@@ -17,25 +17,30 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: end;
+  position: relative;
 }
 
 .data-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  //   background-color: blueviolet;
   height: 150px;
+  // background-color: brown;
+  position: relative;
+  top: -20px;
+  font-family: Optima, sans-serif;
 }
 
 .name {
-  width: 260px;
+  width: 290px;
   height: 40px;
   text-align: center;
   margin: 0;
-  //   background-color: aqua;
+  margin-left: 15px;
   span {
     font-size: 14px;
+    color: rgb(161, 161, 161);
   }
 }
 
@@ -46,8 +51,9 @@
 
 .data-body {
   // background-color: brown;
-  width: 340px;
-  //   height: 310px;
+  width: 440px;
+  height: 150px;
+  // margin-bottom: 30px;
 }
 
 .my-data {
@@ -55,6 +61,10 @@
   list-style: none;
   text-align: left;
   margin: 10px;
+  font-family: Andale Mono, monospace;
+  span {
+    color: rgb(161, 161, 161);
+  }
 }
 
 .data-ul {
@@ -69,13 +79,18 @@
   flex-wrap: wrap;
   //   align-items: center;
   justify-content: center;
+  position: relative;
+  bottom: -15px;
   width: 360px;
-  height: 120px;
-  //   background-color: blue;
+  height: 100px;
+  // margin-top: 40px;
+  // background-color: blue;
   span {
-    padding-top: 30px;
+    padding-top: 20px;
     font-size: 20px;
     font-family: "Roboto Condensed", sans-serif;
+    height: 40px;
+    // background-color: #fff;
   }
 }
 
@@ -84,7 +99,7 @@
   height: 500px;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  // align-items: center;
   justify-content: center;
   position: relative;
   // background-color: brown;
@@ -92,23 +107,30 @@
 
 .me-header {
   width: 500px;
-  height: 130px;
+  height: 110px;
   background-color: rgb(249, 194, 76);
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  h1 {
-    font-size: 55px;
+  position: relative;
+  top: 0px;
+  h2 {
+    font-size: 50px;
     color: white;
     margin-bottom: 0;
+    position: absolute;
+    bottom: -11px;
+    font-family: Verdana, sans-serif;
   }
 }
 
 .history {
   background-color: #fff;
   font-size: 20px;
-  margin-top: 80px;
+  text-align: left;
   width: 400px;
+  font-family: Optima, sans-serif;
+  span {
+    color: rgb(161, 161, 161);
+  }
 }
