--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,18 +3,22 @@
 }
 
 body {
-  margin: 0;
-  background-color: rgb(204, 230, 252);
-}
-
-.App {
-  width: 100%;
   height: 100vh;
   background-color: rgb(204, 230, 252);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+.App {
+  // width: 100%;
+  // height: 100vh;
+  // display: flex;
+  // flex-wrap: wrap;
+  // align-items: center;
+  // justify-content: center;
+  // background-color: brown;
 }
 
 @media (max-width: 900px) {
