--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -4,6 +4,7 @@
 
 body {
   height: 100vh;
+  width: 100%;
   background-color: rgb(204, 230, 252);
   display: flex;
   flex-wrap: wrap;
@@ -12,14 +13,20 @@ body {
 }
 
 .App {
-  // width: 100%;
+  // width: 1000px;
   // height: 100vh;
   // display: flex;
   // flex-wrap: wrap;
   // align-items: center;
   // justify-content: center;
-  // background-color: brown;
+  background-color: brown;
 }
+
+// .test {
+//   background-color: blue;
+//   width: 1100px;
+//   height: 100px;
+// }
 
 @media (max-width: 900px) {
 }
