--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -13,6 +13,10 @@ body {
   justify-content: center;
 }
 
+// .dark-body {
+//   background-color: rgb(17, 42, 65);
+// }
+
 .App {
   margin-top: 80px;
 }
