--- a/src/components/IconsList/icons-list.scss
+++ b/src/components/IconsList/icons-list.scss
@@ -35,7 +35,7 @@ ul li a {
   justify-content: center;
   width: 60px;
   height: 35px;
-  background: #fff;
+  background: #ffffff;
   text-align: left;
   transform: rotate(-30deg) skew(25deg) translate(0, 0);
   transition: 0.5s;
@@ -64,6 +64,17 @@ ul li a:after {
   background: #b1b1b1;
   transform: 0.5s;
   transform: rotate(0deg) skewX(-45deg);
+}
+
+.a-dark {
+  background: #b6b3b3;
+}
+
+.a-dark:before {
+  background: #615f5f;
+}
+.a-dark:after {
+  background: #615f5f;
 }
 
 ul li a:hover {
