I finished the dark theme

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,8 +10,10 @@
   padding: 0 20px 0 20px;
   justify-content: space-between;
   background-color: rgb(249, 194, 76);
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .header-dark {
   background-color: #845503;
+  color: #ffe2b7;
 }
