--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,6 +11,7 @@
   justify-content: space-between;
   background-color: rgb(249, 194, 76);
   font-family: "Roboto Condensed", sans-serif;
+  transition: all 1s;
   img {
     cursor: pointer;
   }
