--- a/src/components/MainPageMobile/main-page-mobile.scss
+++ b/src/components/MainPageMobile/main-page-mobile.scss
@@ -67,9 +67,9 @@
     position: relative;
   }
 
-  .main-dark {
-    background-color: transparent;
-  }
+  // .main-dark {
+  //   background-color: transparent;
+  // }
 
   .me-mobile-header {
     width: 100vw;
@@ -90,14 +90,32 @@
     }
   }
 
-  .me-header-dark {
+  // .me-header-dark {
+  //   background-color: #845503;
+  //   h2 {
+  //     color: #ffe2b7;
+  //   }
+  // }
+
+  .history {
+    margin: 20px 20px 0 20px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .main-page-mobile-container {
+    color: #ffe2b7;
+  }
+  .data-mobile-container {
+    background-color: transparent;
+  }
+  .me-mobile-header {
     background-color: #845503;
     h2 {
       color: #ffe2b7;
     }
   }
-
-  .history {
-    margin: 20px 20px 0 20px;
+  .about-me-mobile-container {
+    background-color: transparent;
   }
 }
