--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  // padding: 0;
   transition: 0.5s;
 }
 
@@ -15,7 +16,7 @@ body {
 }
 
 .App {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 @media (prefers-color-scheme: dark) {
