--- a/src/components/MainPage/main-page.scss
+++ b/src/components/MainPage/main-page.scss
@@ -5,6 +5,7 @@
   height: 500px;
   display: flex;
   background-color: #fff;
+  position: relative;
   // background-color: rgb(0, 132, 255)
 }
 
@@ -81,6 +82,12 @@
   }
 }
 
+.my-data:hover {
+  span {
+    color: black;
+  }
+}
+
 .data-ul {
   display: flex;
   flex-wrap: wrap;
@@ -151,6 +158,23 @@
   }
 }
 
+.mail-copy-container {
+  position: absolute;
+  height: 40px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(14, 14, 14, 0.613);
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  left: 38%;
+  top: 10px;
+  background: rgb(249, 194, 76);
+  display: none;
+}
+
 @media (max-width: 900px) {
   .main-page-container {
     display: none;
@@ -158,9 +182,17 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  .mail-copy-container {
+    background: #845503;
+  }
   .me-header {
     background-color: #845503;
     h2 {
+      color: #ffe2b7;
+    }
+  }
+  .my-data:hover {
+    span {
       color: #ffe2b7;
     }
   }
