--- a/src/components/MainPage/main-page.scss
+++ b/src/components/MainPage/main-page.scss
@@ -6,7 +6,7 @@
   display: flex;
   background-color: #fff;
   position: relative;
-  // background-color: rgb(0, 132, 255)
+  // margin-top: 30px;
 }
 
 // .main-dark {
