--- a/src/components/MainPageMobile/main-page-mobile.scss
+++ b/src/components/MainPageMobile/main-page-mobile.scss
@@ -10,7 +10,7 @@
     width: 100vw;
     background-color: #f8f8f8;
     margin-bottom: 20px;
-    margin-top: 40px;
+    // margin-top: 40px;
     padding: 20px 0 10px 0;
     display: flex;
     align-items: center;
@@ -60,7 +60,6 @@
     // background-color: brown;
     background-color: #fff;
     width: 100vw;
-    margin-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
