--- a/src/components/MySkills/my-skills.scss
+++ b/src/components/MySkills/my-skills.scss
@@ -86,6 +86,7 @@
 
 @media (max-width: 900px) {
   .my-skills-container {
+    width: 100vw;
     height: 350px;
     background-color: transparent;
     // background-color: #fff;
