--- a/src/components/References/references.scss
+++ b/src/components/References/references.scss
@@ -1,8 +1,8 @@
 .references-container {
   width: 100vw;
   padding-bottom: 40px;
-  position: absolute;
-  left: 0;
+  //   position: absolute;
+  //   left: 0;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -34,6 +34,7 @@ iframe {
   color: rgb(17, 42, 65);
   font-family: Optima, sans-serif;
   font-size: 40px;
+  width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
