--- a/src/components/HeaderButtons/header-buttons.scss
+++ b/src/components/HeaderButtons/header-buttons.scss
@@ -18,16 +18,16 @@ button {
 
 @media (max-width: 900px) {
   button {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     margin: 0px 0px 10px 0;
-    color: wheat;
+    color: #ffe2b7;
     background-color: rgb(33, 81, 123);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10px;
+    font-size: 16px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.181);
   }
 
@@ -40,7 +40,8 @@ button {
 
   @media (prefers-color-scheme: light) {
     button {
-      color: wheat;
+      color: black;
+      background-color: #ffe2b7;
     }
   }
 }
