--- a/src/components/HeaderButtons/header-buttons.scss
+++ b/src/components/HeaderButtons/header-buttons.scss
@@ -18,8 +18,8 @@ button {
 
 @media (max-width: 900px) {
   button {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     margin: 0px 0px 10px 0;
     color: #ffe2b7;
     background-color: rgb(33, 81, 123);
@@ -27,7 +27,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 16px;
+    font-size: 12px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.181);
   }
 
@@ -36,6 +36,11 @@ button {
     top: 90px;
     right: -10px;
     margin-right: 20px;
+    width: 90px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
+    // background-color: #fff;
   }
 
   @media (prefers-color-scheme: light) {
